<resources>
    <string name="app_name">To do list</string>
    <string name="label_new_task">Criar Tarefa</string>
    <string name="label_title">Título</string>
    <string name="label_date">Data</string>
    <string name="label_hour">Hora</string>
    <string name="label_cancel">Cancelar</string>
    <string name="lbl_task">Tarefas</string>
    <string name="desc_new_task">Nova tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_you_dont_have_tasks">Ops! você não possui\n nenhuma tarefa pra hoje</string>
</resources>